updated with swagger and ssl fix
