# backend/swagger/docs/swagger.json
@@ -182,7 +182,7 @@
                 }
             }
         },
-        "/api/resources/": {
+        "/api/resources": {
             "get": {
                 "description": "Returns metadata and optionally file contents for a specified resource path.",
                 "consumes": [
@@ -821,7 +821,7 @@
                 }
             }
         },
-        "/api/usage/": {
+        "/api/usage": {
             "get": {
                 "description": "Returns the total and used disk space for a specified directory.",
                 "consumes": [
